--- a/vagrant/alpine/Vagrantfile
+++ b/vagrant/alpine/Vagrantfile
@@ -16,7 +16,7 @@ Vagrant.configure('2') do |config|
   config.vm.provider :libvirt do |libvirt|
     libvirt.memory = '2048'
     libvirt.cpus = 4
-    libvirt.default_prefix = 'KernelAlpine'
+    libvirt.default_prefix = 'LetheAlpine'
     libvirt.storage_pool_name = 'default'
     libvirt.qemu_use_session = false
     libvirt.keymap = 'en-us'
@@ -25,41 +25,19 @@ Vagrant.configure('2') do |config|
   config.vm.provider 'virtualbox' do |vb|
     vb.memory = '2048'
     vb.cpus = 4
-    vb.name = 'KernelAlpine'
+    vb.name = 'LetheAlpine'
     vb.gui = false
     vb.check_guest_additions = false
     vb.customize ['modifyvm', :id, '--clipboard', 'bidirectional']
   end
 
-  config.vm.provision 'shell', inline: <<-SHELL, privileged: false
-    # Upgrade Alpine from 3.18 to 3.21
-    sudo sed -i -e 's/v3.18/v3.21/g' /etc/apk/repositories
-
-    # Add & Upgrade packages
-    sudo apk upgrade -U -a --ignore linux-headers linux-virt
-    sudo apk add bison build-base elfutils-dev flex git htop libressl-dev linux-headers perl strace wget xz
-
-    ## Bashrc tweaks ##
-    echo 'bind -x ""\C-l":clear"' >> ~/.bashrc
-    echo "TERM=xterm-256color" >> ~/.bashrc
-  SHELL
-
+  config.vm.provision 'shell', path: '../../scripts/alpine.sh'
+  config.vm.provision 'shell', path: '../../scripts/tweaks.sh'
   config.vm.provision :reload
 
-  if ENV['VAGRANT_KERNEL'] == 'true'
-    config.vm.provision 'shell', inline: <<-SHELL, privileged: false
-      # Download Kernel
-      KERNEL_VERSION="6.11"
-      wget --no-verbose https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-${KERNEL_VERSION}.tar.xz
-      tar -xf linux-${KERNEL_VERSION}.tar.xz
-      cd linux-${KERNEL_VERSION}
-
-      # Configure & Install Kernel
-      make defconfig
-      make -j$(nproc)
-      sudo make modules_install
-      sudo make install
-
+  config.vm.provision 'shell', path: '../../scripts/kernel.sh'
+  config.vm.provision 'shell', inline: <<-SHELL, privileged: false
+      KERNEL_VERSION="6.15.6"
       # Create an initramfs with new Kernel
       sudo mkinitfs -o /boot/initramfs 6.11.0/
 
@@ -67,20 +45,5 @@ Vagrant.configure('2') do |config|
       sudo sed -i -e 's|^  LINUX vmlinuz-virt|  LINUX vmlinuz|' -e 's|^  INITRD initramfs-virt|  INITRD initramfs|' /boot/extlinux.conf
       sudo reboot
     SHELL
-
-    config.vm.provision :reload
-  end
-
-  if ENV['VAGRANT_CUSTOM'] == 'true'
-    config.vm.provision 'shell', inline: <<-SHELL, privileged: false
-      bash -c "$(curl -fsSL https://raw.githubusercontent.com/ohmybash/oh-my-bash/master/tools/install.sh)"
-
-      # Add & enable rsyslog for kernel logs
-      sudo apk add rsyslog
-      sudo service rsyslog start
-      sudo rc-update add rsyslog default
-    SHELL
-
-    config.vm.provision :reload
-  end
+  config.vm.provision :reload
 end
