--- a/vagrant/fedora/Vagrantfile
+++ b/vagrant/fedora/Vagrantfile
@@ -2,8 +2,8 @@
 
 Vagrant.configure('2') do |config|
   ENV['LC_ALL'] = 'en_US.UTF-8'
-  config.vm.box = 'generic/fedora39'
-  config.vm.box_version = '4.3.12'
+  config.vm.box = 'bento/fedora-latest'
+  config.vm.box_version = '202508.03.0'
 
   # 16,67 mins
   config.vm.boot_timeout = 1000
@@ -16,7 +16,7 @@ Vagrant.configure('2') do |config|
   config.vm.provider :libvirt do |libvirt|
     libvirt.memory = '2048'
     libvirt.cpus = 4
-    libvirt.default_prefix = 'KernelFedora'
+    libvirt.default_prefix = 'LetheFedora'
     libvirt.storage_pool_name = 'default'
     libvirt.qemu_use_session = false
     libvirt.keymap = 'en-us'
@@ -25,51 +25,16 @@ Vagrant.configure('2') do |config|
   config.vm.provider 'virtualbox' do |vb|
     vb.memory = '2048'
     vb.cpus = 4
-    vb.name = 'KernelFedora'
+    vb.name = 'LetheFedora'
     vb.gui = false
     vb.check_guest_additions = false
     vb.customize ['modifyvm', :id, '--clipboard', 'bidirectional']
   end
 
-  config.vm.provision 'shell', inline: <<-SHELL, privileged: false
-    # Add & Upgrade packages
-    sudo dnf update
-    sudo dnf groupinstall @development-tools @development-libraries
-
-    ## Bashrc tweaks ##
-    echo 'bind -x ""\C-l":clear"' >> ~/.bashrc
-    echo "TERM=xterm-256color" >> ~/.bashrc
-  SHELL
-
+  config.vm.provision 'shell', path: '../../scripts/fedora.sh'
+  config.vm.provision 'shell', path: '../../scripts/tweaks.sh'
   config.vm.provision :reload
 
-  if ENV['VAGRANT_KERNEL'] == 'true'
-    config.vm.provision 'shell', inline: <<-SHELL, privileged: false
-      # Download Kernel
-      KERNEL_VERSION="6.11"
-      wget --no-verbose https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-${KERNEL_VERSION}.tar.xz
-      tar -xf linux-${KERNEL_VERSION}.tar.xz
-      cd linux-${KERNEL_VERSION}
-
-      # Configure & Install Kernel
-      make defconfig
-      make -j$(nproc)
-      sudo make modules_install
-      sudo make install
-    SHELL
-
-    config.vm.provision :reload
-  end
-
-  if ENV['VAGRANT_CUSTOM'] == 'true'
-    config.vm.provision 'shell', inline: <<-SHELL, privileged: false
-      bash -c "$(curl -fsSL https://raw.githubusercontent.com/ohmybash/oh-my-bash/master/tools/install.sh)"
-
-      # Add & enable rsyslog for kernel logs
-      sudo dnf install rsyslog -y
-      sudo systemctl enable --now rsyslog
-    SHELL
-
-    config.vm.provision :reload
-  end
+  config.vm.provision 'shell', path: '../../scripts/kernel.sh'
+  config.vm.provision :reload
 end
