--- a/vagrant/fedora/Vagrantfile
+++ b/vagrant/fedora/Vagrantfile
@@ -2,8 +2,8 @@
 
 Vagrant.configure('2') do |config|
   ENV['LC_ALL'] = 'en_US.UTF-8'
-  config.vm.box = 'bento/fedora-latest'
-  config.vm.box_version = '202508.03.0'
+  config.vm.box = 'fedora/41-cloud-base'
+  config.vm.box_version = '41-20241024.0'
 
   # 16,67 mins
   config.vm.boot_timeout = 1000
@@ -35,6 +35,6 @@ Vagrant.configure('2') do |config|
   config.vm.provision 'shell', path: '../../scripts/tweaks.sh'
   config.vm.provision :reload
 
-  config.vm.provision 'shell', path: '../../scripts/kernel.sh'
+  # config.vm.provision 'shell', path: '../../scripts/kernel.sh'
   config.vm.provision :reload
 end
