--- a/vagrant/alpine/Vagrantfile
+++ b/vagrant/alpine/Vagrantfile
@@ -11,7 +11,8 @@ Vagrant.configure('2') do |config|
   config.vm.network 'private_network', type: 'dhcp'
 
   config.vm.synced_folder '.', '/vagrant', disabled: true
-  config.vm.synced_folder '../../module', '/home/vagrant/module', type: 'rsync'
+  config.vm.synced_folder '../../bpf', '/home/vagrant/bpf', type: 'rsync'
+  config.vm.synced_folder '../../lkm', '/home/vagrant/lkm', type: 'rsync'
 
   config.vm.provider :libvirt do |libvirt|
     libvirt.memory = '2048'
