--- a/vagrant/arch/Vagrantfile
+++ b/vagrant/arch/Vagrantfile
@@ -12,7 +12,8 @@ Vagrant.configure('2') do |config|
   config.ssh.keep_alive = true
 
   config.vm.synced_folder '.', '/vagrant', disabled: true
-  config.vm.synced_folder '../../module', '/home/vagrant/module', type: 'rsync'
+  config.vm.synced_folder '../../bpf', '/home/vagrant/bpf', type: 'rsync'
+  config.vm.synced_folder '../../lkm', '/home/vagrant/lkm', type: 'rsync'
 
   config.vm.provider :libvirt do |libvirt|
     libvirt.memory = '1024'
